Add jambalaya photo

--- a/recipes/jambalaya.html
+++ b/recipes/jambalaya.html
@@ -6,5 +6,6 @@
 </head>
 <body>
     <h1>Jambalaya</h1>
+    <img src="https://www.allrecipes.com/thmb/-BEwQR42MmACDPjRgsRxOufE0qA=/650x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/101804670-Jambalaya-meredith-390fb40aef864518ad2bcda30dd782fb.jpg">
 </body>
 </html>
