Add Jambalaya description

--- a/recipes/jambalaya.html
+++ b/recipes/jambalaya.html
@@ -7,5 +7,10 @@
 <body>
     <h1>Jambalaya</h1>
     <img src="https://www.allrecipes.com/thmb/-BEwQR42MmACDPjRgsRxOufE0qA=/650x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/101804670-Jambalaya-meredith-390fb40aef864518ad2bcda30dd782fb.jpg">
+    <h2><strong>What is Jambalaya?</strong></h2>
+    <p>Jambalaya is a one-pot dish that's made with rice, meat or seafood, and vegetables.
+         With French and Spanish influences, jambalaya is quite similar to paella.
+         The name "jambalaya" likely comes from the Provencal word "jambalaia," which means mishmash.</p>
+    <p>Like many Cajun and Creole foods, jambalaya starts with the Cajun holy trinity: a flavor base of onion, bell peppers, and celery.</p>
 </body>
 </html>
