--- a/recipes/jambalaya.html
+++ b/recipes/jambalaya.html
@@ -12,5 +12,16 @@
          With French and Spanish influences, jambalaya is quite similar to paella.
          The name "jambalaya" likely comes from the Provencal word "jambalaia," which means mishmash.</p>
     <p>Like many Cajun and Creole foods, jambalaya starts with the Cajun holy trinity: a flavor base of onion, bell peppers, and celery.</p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li><strong>Oil:</strong> Chicken and andouille sausage are sauteed in peanut oil.</li>
+        <li><strong>Sausage:</strong> Opt for andouille sausage for the most authentic jambalaya.</li>
+        <li><strong>Chicken:</strong> Cut one pound of boneless, skinless chicken breasts into 1-inch pieces.</li>
+        <li><strong>Spices and seasonings:</strong> This chicken and sausage jambalaya is flavored with Cajun seasoning, fresh garlic, red pepper flakes, salt, pepper, hot sauce, Worcestershire sauce, and file powder.</li>
+        <li><strong>Vegetables:</strong> You'll need an onion, green bell peppers, and celery.</li>
+        <li><strong>Rice:</strong> Opt for plain white rice for this jambalaya recipe.</li>
+        <li><strong>Broth:</strong> Use store-bought or homemade chicken broth to cook rice.</li>
+    </ul>
+
 </body>
 </html>
