--- a/recipes/jambalaya.html
+++ b/recipes/jambalaya.html
@@ -22,6 +22,12 @@
         <li><strong>Rice:</strong> Opt for plain white rice for this jambalaya recipe.</li>
         <li><strong>Broth:</strong> Use store-bought or homemade chicken broth to cook rice.</li>
     </ul>
+    <h2>Steps</h2>
+    <ol>
+        <li><strong>Cook the meat:</strong> Season the sausage and chicken pieces with Cajun seasoning. Saute the sausage until browned, then remove with a slotted spoon and set aside. Saute chicken until lightly browned on all sides. Remove with a slotted spoon and set aside.</li>
+        <li><strong>Cook the vegetables:</strong> In the same pot, saute the onion, celery, bell pepper, and garlic until tender. Stir in the crushed tomatoes and seasonings. Add the meat and cook for 10 minutes.</li>
+        <li><strong>Add the rice:</strong> Stir in the rice and chicken broth. Bring to a boil, reduce the heat, and cook until all the liquid is absorbed.</li>
+    </ol>
 
 </body>
 </html>
