--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
 <body>
     <h1>Odin Recipes</h1>
     
-     <a href="recipes/jambalaya.html">Jambalaya</a>
-   
+    <ul>
+        <li><a href="recipes/jambalaya.html">Jambalaya</a></li>
+        <li><a href="">Blackened Salmon Fillets</a></li>
+        <li><a href=""> </a></li>
+    </ul>
 </body>
 </html>
