--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     
     <ul>
         <li><a href="recipes/jambalaya.html">Jambalaya</a></li>
-        <li><a href="">Blackened Salmon Fillets</a></li>
+        <li><a href="recipes/blackenedSalmonFillet.html">Blackened Salmon Fillets</a></li>
         <li><a href=""> </a></li>
     </ul>
 </body>
