Add unordered list of ingridients to salmon recipe

--- a/recipes/blackenedSalmonFillet.html
+++ b/recipes/blackenedSalmonFillet.html
@@ -5,6 +5,10 @@
     <title>Blackened Salmon Fillets</title>
 </head>
 <body>
-    
+    <h1>Blackened Salmon Fillets</h1>
+    <img src="https://www.allrecipes.com/thmb/KA7Ot8NbxqQsnYMQhGsHG1aWys8=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/1095418-079010e099924935b25a4b6a01d6e3ef.jpg">
+    <h2>Description</h2>
+    <p>Blackened salmon is made using a cooking technique where fish fillets are liberally seasoned with a cajun spice rub then pan seared in a hot skillet until fairly well darkened (or blackened) on the exterior.</p>
+    <p>A beautiful crisp crust is formed and it has a nice hint of a charred flavor which highlight its more mellow interior.</p> 
 </body>
 </html>
