--- a/recipes/blackenedSalmonFillet.html
+++ b/recipes/blackenedSalmonFillet.html
@@ -9,6 +9,24 @@
     <img src="https://www.allrecipes.com/thmb/KA7Ot8NbxqQsnYMQhGsHG1aWys8=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/1095418-079010e099924935b25a4b6a01d6e3ef.jpg">
     <h2>Description</h2>
     <p>Blackened salmon is made using a cooking technique where fish fillets are liberally seasoned with a cajun spice rub then pan seared in a hot skillet until fairly well darkened (or blackened) on the exterior.</p>
-    <p>A beautiful crisp crust is formed and it has a nice hint of a charred flavor which highlight its more mellow interior.</p> 
+    <p>A beautiful crisp crust is formed and it has a nice hint of a charred flavor which highlight its more mellow interior.</p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>2 tablespoons of ground paprika</li>
+        <li>1 tablespoon of ground cayenne pepper</li>
+        <li>1 tablespoon onion powder</li>
+        <li>2 teaspoons salt</li>
+        <li>1/2 teaspoon ground white pepper</li>
+        <li>1/2 teaspoon ground black pepper</li>
+        <li>1/4 teaspoon dried thyme</li>
+        <li> teaspoon dried basil</li>
+        <li>1/4 teaspoon dried oregano</li>
+        <li>4 salmon fillets, skin and bones removed</li>
+        <li>1/2 cup unsalted butter, melted</li>
+    </ul> 
+    <h2>Steps</h2>
+    <ol>
+        <li></li>
+    </ol>
 </body>
 </html>
