--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <ul>
         <li><a href="recipes/jambalaya.html">Jambalaya</a></li>
         <li><a href="recipes/blackenedSalmonFillet.html">Blackened Salmon Fillets</a></li>
-        <li><a href=""> </a></li>
+        <li><a href="recipes/newOrleansGumbo.html">Good New Orleans Creole Gumbo</a></li>
     </ul>
 </body>
 </html>
