Fill the ingridients list

--- a/recipes/newOrleansGumbo.html
+++ b/recipes/newOrleansGumbo.html
@@ -17,25 +17,25 @@
         <li>1 cup coarsely chopped celery</li>
         <li>1 large onion, coarsely chopped</li>
         <li>1 large green bell pepper, coarsely chopped</li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li>2 cloves garlic, minced</li>
+        <li>1 pound andouille sausage, sliced</li>
+        <li>3 quarts water</li>
+        <li>6 cubes beef bouillon</li>
+        <li>1 tablespoon white sugar</li>
+        <li>salte to taste</li>
+        <li>2 tablespoons hot pepper sauce(eg. <em>Tabasco</em>), or to taste</li>
+        <li>1/2 teaspoon Cajun seasoning blend, or to taste</li>
+        <li>4 bay leaves</li>
+        <li>1/2 teaspoon dried thyme leaves</li>
+        <li>1 (<em>14.5 ounce</em>) can stewed tomatoes</li>
+        <li>1 (<em>6 ounce</em>) can tomato sauce</li>
+        <li>4 teaspoons file powder, divided</li>
+        <li>2 tablespoons bacon dripings</li>
+        <li>2 (<em>10 ounce</em>) packages frozen cut okra, thawed</li>
+        <li>2 tablespoons distilled white cinegar</li>
+        <li>1 pound lump crabmeat</li>
+        <li>3 pounds uncooked medium shrimp, peeled and deveined</li>
+        <li>2 tablespoons Worcestershire sauce</li>
     </ul>
 </body>
 </html>
