--- a/recipes/blackenedSalmonFillet.html
+++ b/recipes/blackenedSalmonFillet.html
@@ -3,29 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <title>Blackened Salmon Fillets</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-    <h1>Blackened Salmon Fillets</h1>
-    <img src="https://www.allrecipes.com/thmb/KA7Ot8NbxqQsnYMQhGsHG1aWys8=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/1095418-079010e099924935b25a4b6a01d6e3ef.jpg">
+    <h1 class="title">Blackened Salmon Fillets</h1>
+    <img class="image" src="https://www.allrecipes.com/thmb/KA7Ot8NbxqQsnYMQhGsHG1aWys8=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/1095418-079010e099924935b25a4b6a01d6e3ef.jpg">
     <h2>Description</h2>
     <p>Blackened salmon is made using a cooking technique where fish fillets are liberally seasoned with a cajun spice rub then pan seared in a hot skillet until fairly well darkened (or blackened) on the exterior.</p>
     <p>A beautiful crisp crust is formed and it has a nice hint of a charred flavor which highlight its more mellow interior.</p>
     <h2>Ingredients</h2>
     <ul>
-        <li>2 tablespoons of ground paprika</li>
-        <li>1 tablespoon of ground cayenne pepper</li>
-        <li>1 tablespoon onion powder</li>
-        <li>2 teaspoons salt</li>
-        <li>1/2 teaspoon ground white pepper</li>
-        <li>1/2 teaspoon ground black pepper</li>
-        <li>1/4 teaspoon dried thyme</li>
-        <li> teaspoon dried basil</li>
-        <li>1/4 teaspoon dried oregano</li>
-        <li>4 salmon fillets, skin and bones removed</li>
-        <li>1/2 cup unsalted butter, melted</li>
+        <li class="ingredients">2 tablespoons of ground paprika</li>
+        <li class="ingredients">1 tablespoon of ground cayenne pepper</li>
+        <li class="ingredients">1 tablespoon onion powder</li>
+        <li class="ingredients">2 teaspoons salt</li>
+        <li class="ingredients">1/2 teaspoon ground white pepper</li>
+        <li class="ingredients">1/2 teaspoon ground black pepper</li>
+        <li class="ingredients">1/4 teaspoon dried thyme</li>
+        <li class="ingredients"> teaspoon dried basil</li>
+        <li class="ingredients">1/4 teaspoon dried oregano</li>
+        <li class="ingredients">4 salmon fillets, skin and bones removed</li>
+        <li class="ingredients">1/2 cup unsalted butter, melted</li>
     </ul> 
     <h2>Steps</h2>
-    <ol>
+    <ol class="steps">
         <li><strong>Mix</strong> paprika, cayenne pepper, onion powder, salt, white and black pepper, thyme, basil, and oregano together in a small bowl.</li>
         <li><strong>Brush</strong> salmon fillets on both sides with 1/4 cup butter, and sprinkle evenly with the spice mixture. </li>
         <li><strong>Heat</strong> 2 tablespoons melted butter in a large, heavy skillet over high heat. Add salmon and cook until blackened, 2 to 5 minutes. Lift fillets, add remaining melted butter to the skillet, and flip fillets into the butter. Cook until the other side is blackened and fish flakes easily with a fork, 3 to 5 minutes. </li>
