--- a/recipes/newOrleansGumbo.html
+++ b/recipes/newOrleansGumbo.html
@@ -3,15 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Good New Orleans Creole Gumbo</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-    <h1>Good New Orleans Creole Gumbo</h1>
-    <img src="https://www.allrecipes.com/thmb/HbPjbgCvBYbRMYy5mtvkjTQF0Jg=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/216888-Good-New-Orleans-Creole-Gumbo-mfs_005-1-e2a586ac68e640f8b9642c839d487aa5.jpg">
-    <h2>What is Gumbo</h2>
+    <h1 class="title">Good New Orleans Creole Gumbo</h1>
+    <img class="image" src="https://www.allrecipes.com/thmb/HbPjbgCvBYbRMYy5mtvkjTQF0Jg=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/216888-Good-New-Orleans-Creole-Gumbo-mfs_005-1-e2a586ac68e640f8b9642c839d487aa5.jpg">
+    <h2 class="header">What is Gumbo</h2>
     <p>Gumbo is one of the most famous dishes to result from Louisiana's shared Creole-Cajun heritage. Gumbo falls somewhere between a thick stew and a hearty soup and can contain ingredients such as chicken, sausage, ham, seafood, okra, tomatoes, and greens.</p>
     <p>As varied as the recipes can be, there are a few ingredients that all gumbos have in common: homemade stock; the "holy trinity" of celery, onions, and green peppers; and roux. </p>
-    <h2>Ingredients</h2>
-    <ul>
+    <h2 class="header">Ingredients</h2>
+    <ul class="ingredients">
         <li>1 cup all-purpose flour</li>
         <li>3/4 cup bacon drippings</li>
         <li>1 cup coarsely chopped celery</li>
@@ -37,8 +38,8 @@
         <li>3 pounds uncooked medium shrimp, peeled and deveined</li>
         <li>2 tablespoons Worcestershire sauce</li>
     </ul>
-    <h2>Steps</h2>
-    <ol>
+    <h2 class="header">Steps</h2>
+    <ol class="steps">
         <li><strong>Make the roux:</strong> Whisk together flour and 3/4 cup bacon drippings in a large, heavy saucepan over medium-low heat until smooth. Cook roux, whisking constantly, until it turns a rich mahogany brown color. This can take 20 to 30 minutes; watch heat carefully and whisk constantly or roux will burn. Remove from heat; continue whisking until mixture stops cooking. </li>
         <li><strong>Make the gumbo:</strong> Place celery, onion, green bell pepper, and garlic into the work bowl of a food processor, and pulse until all vegetables are very finely chopped. Stir vegetables into the roux, and mix in sausage. Bring mixture to a simmer over medium-low heat, and cook until vegetables are tender, 10 to 15 minutes. Remove from heat and set aside. </li>
         <li><strong>Combine</strong> water and beef bouillon cubes in a large Dutch oven or soup pot and bring to a boil over medium-high heat. Stir until bouillon cubes dissolve, then whisk roux mixture into the boiling water. </li>
