--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>OdinRecipes</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Odin Recipes</h1>
+    <h1 class="title">Odin Recipes</h1>
     
     <ul>
-        <li><a href="recipes/jambalaya.html">Jambalaya</a></li>
-        <li><a href="recipes/blackenedSalmonFillet.html">Blackened Salmon Fillets</a></li>
-        <li><a href="recipes/newOrleansGumbo.html">Good New Orleans Creole Gumbo</a></li>
+        <li class="list"><a href="recipes/jambalaya.html">Jambalaya</a></li>
+        <li class="list"><a href="recipes/blackenedSalmonFillet.html">Blackened Salmon Fillets</a></li>
+        <li class="list"><a href="recipes/newOrleansGumbo.html">Good New Orleans Creole Gumbo</a></li>
     </ul>
 </body>
 </html>
