Add new elements to style.css
Removed <strong> from Jambalaya Descritption

--- a/recipes/jambalaya.html
+++ b/recipes/jambalaya.html
@@ -8,12 +8,12 @@
 <body>
     <h1 class="title">Jambalaya</h1>
     <img class="image" src="https://www.allrecipes.com/thmb/-BEwQR42MmACDPjRgsRxOufE0qA=/650x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/101804670-Jambalaya-meredith-390fb40aef864518ad2bcda30dd782fb.jpg">
-    <h2><strong>What is Jambalaya?</strong></h2>
+    <h2 class="header">What is Jambalaya?</h2>
     <p>Jambalaya is a one-pot dish that's made with rice, meat or seafood, and vegetables.
          With French and Spanish influences, jambalaya is quite similar to paella.
          The name "jambalaya" likely comes from the Provencal word "jambalaia," which means mishmash.</p>
     <p>Like many Cajun and Creole foods, jambalaya starts with the Cajun holy trinity: a flavor base of onion, bell peppers, and celery.</p>
-    <h2>Ingredients</h2>
+    <h2 class="header">Ingredients</h2>
     <ul class="ingredients">
         <li><strong>Oil:</strong> Chicken and andouille sausage are sauteed in peanut oil.</li>
         <li><strong>Sausage:</strong> Opt for andouille sausage for the most authentic jambalaya.</li>
@@ -23,7 +23,7 @@
         <li><strong>Rice:</strong> Opt for plain white rice for this jambalaya recipe.</li>
         <li><strong>Broth:</strong> Use store-bought or homemade chicken broth to cook rice.</li>
     </ul>
-    <h2>Steps</h2>
+    <h2 class="header">Steps</h2>
     <ol class="steps">
         <li><strong>Cook the meat:</strong> Season the sausage and chicken pieces with Cajun seasoning. Saute the sausage until browned, then remove with a slotted spoon and set aside. Saute chicken until lightly browned on all sides. Remove with a slotted spoon and set aside.</li>
         <li><strong>Cook the vegetables:</strong> In the same pot, saute the onion, celery, bell pepper, and garlic until tender. Stir in the crushed tomatoes and seasonings. Add the meat and cook for 10 minutes.</li>
