--- a/recipes/blackenedSalmonFillet.html
+++ b/recipes/blackenedSalmonFillet.html
@@ -8,10 +8,10 @@
 <body>
     <h1 class="title">Blackened Salmon Fillets</h1>
     <img class="image" src="https://www.allrecipes.com/thmb/KA7Ot8NbxqQsnYMQhGsHG1aWys8=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/1095418-079010e099924935b25a4b6a01d6e3ef.jpg">
-    <h2>Description</h2>
+    <h2 class="header">Description</h2>
     <p>Blackened salmon is made using a cooking technique where fish fillets are liberally seasoned with a cajun spice rub then pan seared in a hot skillet until fairly well darkened (or blackened) on the exterior.</p>
     <p>A beautiful crisp crust is formed and it has a nice hint of a charred flavor which highlight its more mellow interior.</p>
-    <h2>Ingredients</h2>
+    <h2 class="header">Ingredients</h2>
     <ul>
         <li class="ingredients">2 tablespoons of ground paprika</li>
         <li class="ingredients">1 tablespoon of ground cayenne pepper</li>
@@ -25,7 +25,7 @@
         <li class="ingredients">4 salmon fillets, skin and bones removed</li>
         <li class="ingredients">1/2 cup unsalted butter, melted</li>
     </ul> 
-    <h2>Steps</h2>
+    <h2 class="header">Steps</h2>
     <ol class="steps">
         <li><strong>Mix</strong> paprika, cayenne pepper, onion powder, salt, white and black pepper, thyme, basil, and oregano together in a small bowl.</li>
         <li><strong>Brush</strong> salmon fillets on both sides with 1/4 cup butter, and sprinkle evenly with the spice mixture. </li>
